@@ -47,6 +47,8 @@ typedef struct
     /** @return URJ_STATUS_OK on success; URJ_STATUS_FAIL on error, both
      * syntax and library errors */
     int (*run) (urj_chain_t *chain, char *params[]);
+    void (*complete) (urj_chain_t *chain, char ***matches, size_t *match_cnt,
+                      const char *text, size_t text_len, size_t token_point);
 } urj_cmd_t;
 
 #define _URJ_CMD(cmd) extern const urj_cmd_t urj_cmd_##cmd;
@@ -86,5 +88,52 @@ do { \
         urj_log (URJ_LOG_LEVEL_NORMAL, "%-*s %s\n", max_len + 1, \
                  arr[i]->name, _(arr[i]->description)); \
 } while (0)
+
+/**
+ * Internal completion helper for adding to the set of matches.
+ *
+ * @param match this must be malloced memory that may be freed in the
+ *              future by common code -- do not free it yourself
+ */
+void urj_completion_add_match (char ***matches, size_t *cnt, char *match);
+
+/**
+ * Internal completion helper for adding to the set of matches.
+ *
+ * @param match this string will be strduped before being passed down
+ *              to the urj_completion_add_match helper.
+ */
+void urj_completion_add_match_dupe (char ***matches, size_t *cnt,
+                                    const char *match);
+
+/**
+ * Internal completion helper for possibly adding to the set of matches.
+ * If text matches the leading portion of match, then it will be added.
+ *
+ * @param text  the string to compare to match (e.g. user input)
+ * @param match the string to possibly add to the set of matches
+ */
+void urj_completion_maybe_add_match (char ***matches, size_t *cnt,
+                                     const char *text, const char *match);
+
+/**
+ * This is just like urj_completion_maybe_add_match, except the length of
+ * text is precomputed.  This is so common, we get a dedicated function.
+ *
+ * @param text     the string to compare to match (e.g. user input)
+ * @param text_len the length of text
+ * @param match    the string to possibly add to the set of matches
+ */
+void urj_completion_mayben_add_match (char ***matches, size_t *cnt,
+                                      const char *text, size_t text_len,
+                                      const char *match);
+
+/**
+ * Internal completion helper for matching against the signal list.
+ * Since many functions involve signals as an option, unify the code
+ * in one place.
+ */
+void cmd_signal_complete (urj_chain_t *chain, char ***matches,
+                          size_t *match_cnt, const char *text, size_t text_len);
 
 #endif /* URJ_CMD_H */
